Fixed issues with chats screen not scrolling and issues with not showing chats

--- a/src/routes/Chat/Chat.css
+++ b/src/routes/Chat/Chat.css
@@ -3,6 +3,7 @@
     background-color: #222222;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 1em;
 }
 
@@ -60,4 +61,5 @@
     flex-direction: column;
     gap: 1em;
     overflow: scroll;
+    margin-bottom: 1em;
 }
